# learning-rust

./: .gitignore
chat-app/src/: main.rs
foobar/: Cargo.toml
foobar/src/: main.rs
full-text-search/: Cargo.toml
full-text-search/src/: indexer.rs  main.rs
graph/src/: main.rs
lisp/: readme.md
lisp/src/: evaluator.rs  lexer.rs  main.rs  parser.rs
mandelbrot/: readme.md
mandelbrot/src/: main.rs
parser_combinators/: Cargo.toml  readme.md
parser_combinators/src/: json_nom.rs  main.rs
playground/: Cargo.toml
playground/src/: async_learn.rs  bencode.rs  cli_parse.rs  closures.rs  closures_in_map.rs  errors.rs  fan_out.rs  graph.rs  http_server.rs  indexer.rs  io.rs  iterators.rs  linked_list.rs  macros.rs  main.rs  methods.rs  more_smart_pointers.rs  ref_traits.rs  simple_lexer.rs  smart_pointers.rs  splitter.rs  threads.rs  traits.rs  tree.rs  tree_array.rs  trie.rs
simple-lexer/: Cargo.toml
simple-lexer/src/: main.rs
sqling/src/: main.rs
todo_app/: Cargo.toml  docker-compose.yml  makefile  schema.sql
todo_app/src/: db.rs  main.rs
todo_app/templates/: all.html  button.html  main.html
