[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.3.0"
axum = "0.6.20"
postgres = "0.19.5"
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
